# zmartV0.69

./: .env.example  .env.test.example  .github-private-test.md  .gitignore  ADMIN_WALLET_FINDINGS.md  AUTOMATED-TESTING-COMPLETE.md  Anchor.toml  CLAUDE.md  CLAUDE.md.backup-2025-11-10  CLEANUP_COMPLETE.md  CRITICAL_BUG_FIX_SESSION.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_STATUS.md  DEVNET_DEPLOYMENT_COMPLETE.md  DEVNET_TESTING_COMPLETE.md  DEVNET_TEST_RESULTS.md  E2E-TESTING-GUIDE.md  FIXES_IMPLEMENTED.md  FRESH_DEPLOYMENT_COMPLETE.md  GITHUB_SETUP_COMPLETE.md  INIT_WORKAROUND.md  NEXT_STEPS.md  PLAYWRIGHT-TESTING-STRATEGY.md  PROJECT_STATUS_COMPLETE_SUMMARY.md  README.md  SECURITY_FIXES.md  SESSION_COMPLETE_SUMMARY.md  SESSION_SUMMARY_NOV11.md  TESTING_SESSION_SUCCESS.md  TEST_RESULTS.md  TRADING_FIX_COMPLETE.md  WEEK-10-DAY-2-COMPLETE.md  WEEK_3_4_COMPLETION_REPORT.md  ZMART_API.postman_collection.json  cleanup-repo.sh  package.json  playwright.config.ts  pnpm-lock.yaml  (+4 more)
backend/: .env  (+24 more)
programs/zmart-core/: Cargo.toml
programs/zmart-core/src/: error.rs  lib.rs
programs/zmart-core/src/instructions/: activate_market.rs  aggregate_dispute_votes.rs  aggregate_proposal_votes.rs  approve_proposal.rs  buy_shares.rs  cancel_market.rs  claim_winnings.rs  create_market.rs  emergency_pause.rs  finalize_market.rs  initialize_global_config.rs  initiate_dispute.rs  mod.rs  resolve_market.rs  sell_shares.rs  submit_dispute_vote.rs  submit_proposal_vote.rs  update_global_config.rs  withdraw_liquidity.rs
programs/zmart-core/src/math/: bounded_loss.rs  fixed_point.rs  lmsr.rs  mod.rs
programs/zmart-core/src/state/: global_config.rs  market.rs  mod.rs  position.rs  vote_record.rs
programs/zmart-core/src/utils/: fees.rs  mod.rs  rent.rs
programs/zmart-proposal/: Cargo.toml
programs/zmart-proposal/src/: error.rs  lib.rs
(+848 files in other folders)
