[package]
name = "zmart-core"
version = "0.69.0"
description = "ZMART Core - Prediction market trading and resolution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zmart_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
spl-token = { version = "6.0", features = ["no-entrypoint"] }
