[package]
name = "zmart-proposal"
version = "0.69.0"
description = "ZMART Proposal Manager - Voting aggregation and proposal lifecycle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zmart_proposal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
